kubernetes/apps/tools/containerssh/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: containerssh
  namespace: tools
  labels:
    app: containerssh
spec:
  replicas: 1
  selector:
    matchLabels:
      app: containerssh
  template:
    metadata:
      labels:
        app: containerssh
    spec:
      serviceAccountName: containerssh
      containers:
        - name: containerssh
          image: containerssh/containerssh:v0.5.2@sha256:8abfc0468975df8d9114829486636424eba87dfd55f3f8da3ce5e74ce052cb75
          securityContext:
            readOnlyRootFilesystem: true
            runAsNonRoot: true
          ports:
            - containerPort: 2222
          volumeMounts:
            - name: hostkey
              mountPath: /etc/containerssh/host.key
              subPath: host.key
              readOnly: true
            - name: config
              mountPath: /etc/containerssh/config.yaml
              subPath: config.yaml
              readOnly: true
      volumes:
        - name: hostkey
          secret:
            secretName: containerssh-host-key
        - name: config
          configMap:
            name: containerssh-config
