kubernetes/apps/tools/containerssh/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: containerssh-nodeport
  namespace: tools
spec:
  selector:
    app: containerssh
  type: NodePort
  ports:
    - port: 2222
      nodePort: 30022
